// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DescriptionLLM /> should render 1`] = `
<Callout
  type="warning"
>
  <div>
    This entry contains information
    <Tooltip
      title="Description, Name and Short name"
    >
      <sup>
        <span
          className="icon icon-common"
          data-icon=""
          style={
            {
              "fontSize": "0.6rem",
            }
          }
        />
      </sup>
    </Tooltip>
     
    that has been generated using an AI language model. Please exercise discretion when interpreting the information provided.
  </div>
  <div
    style={
      {
        "display": "flex",
        "gap": "2em",
        "paddingTop": "0.4em",
      }
    }
  >
    <Memo(Connect(Link))
      href="https://interpro-documentation.readthedocs.io/en/latest/llm_descriptions.html"
      target="_blank"
    >
      <span
        className="small icon icon-common icon-book"
      />
       
      Read more on description generation
    </Memo(Connect(Link))>
    <Memo(Connect(Link))
      href="https://docs.google.com/forms/d/e/1FAIpQLSc9lPkgGOZBpnyLiHF87AbUYdAWyx_3YFTNNg4MGQEcqAK4jQ/viewform?usp=pp_url&entry.128814244=PTHR48251"
      target="_blank"
    >
      <span
        className="small icon icon-common icon-pencil-alt"
      />
       
      Provide feedback
    </Memo(Connect(Link))>
  </div>
</Callout>
`;

exports[`<DescriptionLLM /> should render 2`] = `
<Callout
  type="warning"
>
  <div>
    This entry contains information
    <Tooltip
      title="Name and Short name"
    >
      <sup>
        <span
          className="icon icon-common"
          data-icon=""
          style={
            {
              "fontSize": "0.6rem",
            }
          }
        />
      </sup>
    </Tooltip>
     
    that has been generated using an AI language model. Please exercise discretion when interpreting the information provided.
  </div>
  <div
    style={
      {
        "display": "flex",
        "gap": "2em",
        "paddingTop": "0.4em",
      }
    }
  >
    <Memo(Connect(Link))
      href="https://interpro-documentation.readthedocs.io/en/latest/llm_descriptions.html"
      target="_blank"
    >
      <span
        className="small icon icon-common icon-book"
      />
       
      Read more on description generation
    </Memo(Connect(Link))>
    <Memo(Connect(Link))
      href="https://docs.google.com/forms/d/e/1FAIpQLSc9lPkgGOZBpnyLiHF87AbUYdAWyx_3YFTNNg4MGQEcqAK4jQ/viewform?usp=pp_url&entry.128814244=PTHR48251"
      target="_blank"
    >
      <span
        className="small icon icon-common icon-pencil-alt"
      />
       
      Provide feedback
    </Memo(Connect(Link))>
  </div>
</Callout>
`;

exports[`<DescriptionLLM /> should render 3`] = `
<Callout
  type="warning"
>
  <div>
    This entry contains information
    <Tooltip
      title="Description"
    >
      <sup>
        <span
          className="icon icon-common"
          data-icon=""
          style={
            {
              "fontSize": "0.6rem",
            }
          }
        />
      </sup>
    </Tooltip>
     
    that has been generated using an AI language model. Please exercise discretion when interpreting the information provided.
  </div>
  <div
    style={
      {
        "display": "flex",
        "gap": "2em",
        "paddingTop": "0.4em",
      }
    }
  >
    <Memo(Connect(Link))
      href="https://interpro-documentation.readthedocs.io/en/latest/llm_descriptions.html"
      target="_blank"
    >
      <span
        className="small icon icon-common icon-book"
      />
       
      Read more on description generation
    </Memo(Connect(Link))>
    <Memo(Connect(Link))
      href="https://docs.google.com/forms/d/e/1FAIpQLSc9lPkgGOZBpnyLiHF87AbUYdAWyx_3YFTNNg4MGQEcqAK4jQ/viewform?usp=pp_url&entry.128814244=PTHR48251"
      target="_blank"
    >
      <span
        className="small icon icon-common icon-pencil-alt"
      />
       
      Provide feedback
    </Memo(Connect(Link))>
  </div>
</Callout>
`;
